# rust-things3

./: .codecov.yml  .gitignore  .llvm-cov.toml  .rusty-hook.toml  BINARY_NAME_FIX.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DATABASE_COMPARISON_README.md  LICENSE  OBSERVABILITY_DEBUG_PROMPT.md  OBSERVABILITY_IMPLEMENTATION.md  PUBLISHING.md  QUICK_START_TESTING.md  README.md  README_TESTING.md  RELEASE_NOTES.md  SECURITY.md  audit.toml  build.rs  cliff.toml  clippy.toml  cobertura.xml  codecov.yml  coverage-things-common.json  coverage.txt  deny.toml  export.csv  export.json  export.md  lcov-things-common.info  lcov.info  middleware_coverage.txt  moon.yml  rusty-hook.toml  test_import.rs  test_mcp_interactive.sh  test_mcp_with_real_data.py  (+2 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: benchmarks.yml  ci.yml  compatibility.yml  coverage.yml  feature-matrix.yml  publish.yml  release.yml  skills.yml
.moon/: toolchain.yml  workspace.yml
Formula/: things3-cli.rb
apps/things-cli/: Cargo.toml  moon.yml
apps/things3-cli/: Cargo.toml  moon.yml
apps/things3-cli/src/: bulk_operations.rs  dashboard.html  dashboard.rs  events.rs  health.rs  lib.rs  logging.rs  main.rs  mcp.rs  metrics.rs  monitoring.rs  progress.rs  thread_safe_db.rs  websocket.rs
apps/things3-cli/src/events/: broadcaster.rs  filter.rs  listener.rs  mod.rs  types.rs
apps/things3-cli/src/mcp/: io_wrapper.rs  middleware.rs  mod.rs  performance_tests.rs  test_harness.rs
apps/things3-cli/src/mcp/middleware/: auth.rs  config.rs  logging.rs  mod.rs  performance.rs  rate_limit.rs  validation.rs
apps/things3-cli/src/mcp/tools/: admin.rs  areas.rs  export.rs  mod.rs  projects.rs  prompts.rs  resources.rs  tags.rs  tasks.rs
apps/things3-cli/tests/: cli_error_handling.rs  cli_features.rs  error_message_format_tests.rs  feature_flags.rs  integration_real_time_features.rs  integration_tests.rs  mcp_bulk_operations_tests.rs  mcp_date_handling_tests.rs  mcp_integration_workflows.rs  mcp_io_tests.rs  mcp_lifecycle_tests.rs  mcp_lifecycle_tests.rs.disabled  mcp_load_tests.rs  mcp_logbook_tests.rs  mcp_project_area_tests.rs  mcp_protocol_edge_cases.rs  mcp_tag_tests.rs  mcp_testing_framework_tests.rs  mcp_tests.rs  mcp_tests_legacy.rs  mcp_write_operations_tests.rs  middleware_integration_tests.rs  middleware_tests.rs
apps/things3-cli/tests/mcp_tests/: common.rs  error_tests.rs  mod.rs  prompt_tests.rs  resource_tests.rs  tool_tests.rs
benches/: database_benchmarks.rs
configs/: mcp-config.json  mcp-config.yaml
docs/: API_STABILITY.md  ARCHITECTURE.md  CLI.md  COMPATIBILITY.md  COVERAGE_ANALYSIS.md  DATABASE_SCHEMA.md  DEVELOPMENT.md  ERROR_HANDLING.md  ERROR_MESSAGES.md  FEATURES.md  MCP_INTEGRATION.md  MIGRATION.md  MIGRATION_GUIDE.md  PERFORMANCE.md  PHASE3_DEFERRALS.md  PHASE4_FUTURE_IMPROVEMENTS.md  PHASE5_SUMMARY.md  POST_1.0_ROADMAP.md  PUBLICATION_GUIDE.md  QUICKSTART.md  RELIABILITY.md  ROADMAP_TO_1.0.0.md  SECURITY_AUDIT.md  TECHNICAL_DEBT_COMPLETION.md  USER_GUIDE.md  testing-realtime-features.md
examples/: README.md  basic_usage.rs  export_data.rs  search_tasks.rs
examples/integration/: Cargo.toml  README.md  background_service.rs  cli_extension.rs  custom_middleware.rs  mcp_client.rs  web_api.rs
libs/things-core/: Cargo.toml  moon.yml
libs/things-core/src/: backup.rs  cache.rs  config.rs  database.rs  error.rs  export.rs  lib.rs  models.rs  performance.rs  query.rs  test_utils.rs
libs/things-core/tests/: ci_tests.rs  database_tests.rs  integration_tests.rs  schema_inspection.rs
libs/things3-common/: Cargo.toml  moon.yml
libs/things3-common/src/: constants.rs  lib.rs  utils.rs
libs/things3-core/: Cargo.toml  moon.yml
libs/things3-core/benches/: bulk_operations_benchmarks.rs  cache_benchmarks.rs  database_benchmarks.rs
libs/things3-core/examples/: basic_usage.rs  bulk_operations.rs  export_data.rs  search_tasks.rs
libs/things3-core/src/: backup.rs  batch.rs  cache.rs  cache_invalidation_middleware.rs  config.rs  config_hot_reload.rs  config_loader.rs  cursor.rs  database.rs  database_old.rs  disk_cache.rs  error.rs  export.rs  filter_expr.rs  lib.rs  mcp_cache_middleware.rs  mcp_config.rs  models.rs  observability.rs  performance.rs  query.rs  query_cache.rs  query_performance.rs  saved_queries.rs  sqlx_database.rs  test_utils.rs
libs/things3-core/src/cache/: config.rs  mod.rs  operations.rs  preloader.rs  stats.rs
libs/things3-core/src/database/: conversions.rs  core.rs  date_utils.rs  mappers.rs  mod.rs  path_discovery.rs  pool.rs  query_builders.rs  stats.rs  tag_utils.rs  validators.rs
libs/things3-core/src/database/mutations/: areas.rs  bulk.rs  mod.rs  projects.rs  tags.rs  tasks.rs
libs/things3-core/src/database/queries/: areas.rs  mod.rs  projects.rs  tags.rs  tasks.rs
libs/things3-core/src/export/: csv.rs  ical.rs  markdown.rs  mod.rs  opml.rs  taskpaper.rs
libs/things3-core/src/mutations/: mod.rs  sqlx.rs
libs/things3-core/src/mutations/applescript/: escape.rs  mod.rs  parse.rs  runner.rs  script.rs
libs/things3-core/tests/: applescript_live.rs  benchmark_tests.rs  bulk_operations_tests.rs  cache_edge_cases.rs  ci_tests.rs  concurrent_operations_tests.rs  database_error_tests.rs  database_tests.rs  date_handling_tests.rs  export_edge_cases.rs  export_features.rs  feature_disabled_tests.rs  feature_flags.rs  get_task_by_uuid_tests.rs  integration_tests.rs  logbook_search_tests.rs  memory_profiling_tests.rs  observability_features.rs  observability_integration_tests.rs  project_area_operations_tests.rs  reliability_tests.rs  schema_inspection.rs  tag_operations_tests.rs  task_lifecycle_tests.rs  write_operations_tests.rs
scripts/: coverage.sh  create-release.sh  publish-crates.sh  test_realtime_features.sh  update-homebrew-formula.sh
skills/: README.md
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs  tests.rs
tools/xtask/src/commands/: analyze.rs  generate.rs  git_hooks.rs  local_dev.rs  mod.rs  things.rs
(+44 files in other folders)
