[workspace]
resolver = "2"
members = [
    "libs/things-core",
    "libs/things-common",
    "apps/things-cli",
    "tools/xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["GarthDB <garth@example.com>"]
license = "MIT"
repository = "https://github.com/GarthDB/rust-things"
description = "Rust library and CLI for Things 3 integration with integrated MCP server"

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# MCP
mcp = "0.1"

# Async
tokio = { version = "1.0", features = ["full"] }

# Testing
proptest = "1.0"
tempfile = "3.0"
criterion = "0.5"

# Development
xtask = { path = "tools/xtask" }
