[package]
name = "things3-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for Things 3 with integrated MCP server"

[[bin]]
name = "things3"
path = "src/main.rs"

[dependencies]
# Core
things3-core = { version = "0.1.0", features = ["test-utils"] }
things3-common = "0.1.0"

# CLI
clap.workspace = true

# MCP (using custom implementation for now)
# mcp.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Async traits
async-trait = "0.1"

# Logging
env_logger = "0.10"
log = "0.4"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Caching and Performance
moka.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
once_cell.workspace = true

# Export formats
csv.workspace = true
quick-xml.workspace = true

# Performance monitoring
sysinfo.workspace = true

# Security and Authentication
jsonwebtoken = "9.2"
base64 = "0.21"
sha2 = "0.10"
hmac = "0.12"
ring = "0.17"
oauth2 = "4.4"
url = "2.4"

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# Testing and utilities
tempfile = "3.8"
rusqlite = "0.31"
futures = "0.3"

# Real-time updates and progress tracking
tokio-tungstenite = "0.21"
tungstenite = "0.21"
futures-util = "0.3"
indicatif = "0.17"
crossbeam-channel = "0.5"

# Testing
[dev-dependencies]
