[package]
name = "things3-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for Things 3 with integrated MCP server"

[[bin]]
name = "things3"
path = "src/main.rs"

[[bin]]
name = "test-mcp-real-data"
path = "src/bin/test_mcp_real_data.rs"

[dependencies]
# Core
things3-core = { path = "../../libs/things3-core", features = ["test-utils"] }
things3-common = { path = "../../libs/things3-common" }

# CLI
clap.workspace = true

# MCP (using custom implementation for now)
# mcp.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Async traits
async-trait = "0.1"

# Logging and Observability
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
metrics-exporter-tcp.workspace = true
# OpenTelemetry dependencies temporarily disabled
# opentelemetry.workspace = true
# opentelemetry_sdk.workspace = true
# opentelemetry-jaeger.workspace = true
# opentelemetry-otlp.workspace = true
# opentelemetry-semantic-conventions.workspace = true

# Health checks
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Legacy logging (for backward compatibility)
env_logger = "0.10"
log = "0.4"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Caching and Performance
moka.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
once_cell.workspace = true

# Export formats
csv.workspace = true
quick-xml.workspace = true

# Performance monitoring
sysinfo.workspace = true

# Security and Authentication
jsonwebtoken = "9.2"
base64 = "0.21"
sha2 = "0.10"
hmac = "0.12"
ring = "0.17"
oauth2 = "4.4"
url = "2.4"

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# Testing and utilities
tempfile = "3.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json"], default-features = false }
futures = "0.3"

# Real-time updates and progress tracking
tokio-tungstenite = "0.21"
tungstenite = "0.21"
futures-util = "0.3"
indicatif = "0.17"
crossbeam-channel = "0.5"

# Testing
[dev-dependencies]
