[package]
name = "things3-integration-examples"
version = "0.2.0"
edition = "2021"
publish = false

[[example]]
name = "mcp_client"
path = "mcp_client.rs"

[[example]]
name = "cli_extension"
path = "cli_extension.rs"

[[example]]
name = "web_api"
path = "web_api.rs"

[[example]]
name = "background_service"
path = "background_service.rs"

[[example]]
name = "custom_middleware"
path = "custom_middleware.rs"

[dependencies]
things3-core = { path = "../../libs/things3-core", features = ["full", "test-utils"] }
things3-common = { path = "../../libs/things3-common" }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Async
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Web framework
axum = { version = "0.7", features = ["macros", "tracing"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }

# Caching
dashmap = "5.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

