[package]
name = "things3-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/things3-common"
description = "Shared utilities and types for Things 3 integration"
readme = "../../README.md"
keywords = ["things3", "utilities", "shared-types"]
categories = ["development-tools"]

[dependencies]
# Core
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
