[package]
name = "xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Build and development tools for Things 3 integration"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
# CLI
clap.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# File operations
walkdir = "2.0"
regex = "1.0"

# Async (not needed for this tool)
# tokio.workspace = true

# Code generation
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }

# Serialization
serde.workspace = true
serde_json.workspace = true
